Changelog
=========

1.0 (unreleased)
------------------

- Update Bootstrap to 2.3.2 (and add upgrade instructions).
  [davidjb]
- Ensure Bootstrap buttons have value, name, and other attributes copied
  to ensure form actions can take place.
  [davidjb]
   

1.0dev (unreleased)
------------------

- Initial release
